--- a/index.html
+++ b/index.html
@@ -20,13 +20,32 @@
                         <li class="header__list-item"><a href="" class="header__link">Работы</a></li>
                         <li class="header__list-item"><a href="" class="header__link">Услуги</a></li>
                         <li class="header__list-item"><a href="" class="header__link">Процесс</a></li>
-                        <li class="header__list-item"><a href="" class="header__link"></a>Обо мне</li>
-                        <li class="header__list-item"><a href="" class="header__link"></a>Контакты</li>
+                        <li class="header__list-item"><a href="" class="header__link">Обо мне</a></li>
+                        <li class="header__list-item"><a href="" class="header__link">Контакты</a></li>
                     </div>
                 </nav>
                 <div class="header__empty"></div>
             </div>
         </div>
     </header>
+    <section class="promo">
+        <div class="comtainer">
+            <h1 class="h1 promo__title">Сайты на Тильде, которые 
+                убеждают и продают</h1>
+            <p class="paragraph promo__descr">Изучаем ваш бизнес. Узнаем, что важно клиентам, 
+                как вызвать доверие и довести до заявки или покупки</p>
+            <div class="promo__btns-group">
+                <button class="btn promo__btn_tg">Связаться в Telegram</button>
+                <button class="btn btn_outlined promo__btn_video-portfolio">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M7 4.33975L22 13L7 21.6603L7 4.33975Z" stroke="black" stroke-width="2"/>
+                    </svg>
+                    Видеопортфолио
+                </button>
+            </div>
+        </div>
+    </section>
+
+
 </body>
 </html>
