--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
             <div class="gigachad__img">
               <img src="./img/chad.jpg" alt="Gigachad" class="gigachad__img">
             </div>
+            <div class="gigachad__text">
             <h1 class="h1 gigachad__title">Designer & Developer</h1>
-            <p class="paragraph gigachad__descr">Меня зовут гигачад. За 3 года создания сайтов я основал свою студию, собрал людей, готовых к плотной работе.
+            <p class="paragraph gigachad__descr"> Меня зовут гигачад. За 3 года создания сайтов я основал свою студию, собрал людей, готовых к плотной работе.
 
               Запустили лендинг и б2б продукт для UFC. Работали с ВШЭ и МИЭМом. Запустили множество эвентовых проектов и брендинг. Готовы забирать в команду лучших, прокачивать их компетенции, и взращивать русское айти комьюнити</p>
             <div class="gigachad__facts">
@@ -108,6 +109,7 @@
                     опыта</p>
             </div>
           </div>
+        </div>
         </div>
     </section>
 
